[gd_scene load_steps=20 format=3 uid="uid://ceklkriidetef"]

[ext_resource type="Script" uid="uid://rwypgokq32i1" path="res://Scripts/Player/player_character.gd" id="1_qcwfp"]
[ext_resource type="Resource" uid="uid://be0eco16rlgp1" path="res://Scripts/Inventory/test_inv.tres" id="2_ajo0r"]
[ext_resource type="Script" uid="uid://ci5o5tmbvllq2" path="res://Scripts/Player/PlayerStates/StateMachine.gd" id="2_cmdk4"]
[ext_resource type="Script" uid="uid://cr5appi5jhho4" path="res://Scripts/Player/PlayerStates/movement.gd" id="3_o0f8b"]
[ext_resource type="Resource" uid="uid://cxe26o6lg7ak3" path="res://Scripts/Inventory/PlayerInv/RightHandData.tres" id="3_w775p"]
[ext_resource type="Script" uid="uid://r6kv304tv2fo" path="res://Scripts/Player/PlayerStates/idle.gd" id="3_wko77"]
[ext_resource type="Resource" uid="uid://kv5il2mhe3rr" path="res://Scripts/Inventory/PlayerInv/LeftHandData.tres" id="4_4pbxa"]
[ext_resource type="Resource" uid="uid://7le63xptg755" path="res://Scripts/Inventory/PlayerInv/ArmorData.tres" id="5_ews8v"]
[ext_resource type="Script" uid="uid://bu017uqxqo3fq" path="res://Scripts/Player/PlayerStates/jump.gd" id="5_pb3n0"]
[ext_resource type="PackedScene" uid="uid://bp7cwrk7tmlbu" path="res://Assets/Models/right_arm.blend" id="6_ons1q"]
[ext_resource type="Script" uid="uid://fbfeyt4braex" path="res://Scripts/Player/PlayerStates/attack.gd" id="7_flf3p"]
[ext_resource type="Script" uid="uid://c14ee7jah5i1y" path="res://Scripts/Player/PlayerStates/dash.gd" id="11_4pbxa"]
[ext_resource type="FontFile" uid="uid://dieue75bdo68y" path="res://Assets/Fonts/Pixellari.ttf" id="12_ews8v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oigcr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qcwfp"]

[sub_resource type="LabelSettings" id="LabelSettings_12ptb"]
font = ExtResource("12_ews8v")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_6m2el"]
font = ExtResource("12_ews8v")
font_size = 48

[sub_resource type="BoxShape3D" id="BoxShape3D_pb3n0"]
size = Vector3(1, 1, 2)

[sub_resource type="SphereShape3D" id="SphereShape3D_4pbxa"]
radius = 15.0

[node name="PlayerCharacter" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_qcwfp")
inventory_data = ExtResource("2_ajo0r")
right_hand_inventory_data = ExtResource("3_w775p")
left_hand_inventory_data = ExtResource("4_4pbxa")
armor_inventory_data = ExtResource("5_ews8v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oigcr")

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="Shape" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oigcr")

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_qcwfp")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "state_label")]
script = ExtResource("2_cmdk4")
initial_state = NodePath("Idle")
state_label = NodePath("../CanvasLayer/Hud/State")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_wko77")

[node name="Movement" type="Node" parent="StateMachine"]
script = ExtResource("3_o0f8b")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("5_pb3n0")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("weapon_hitbox", "right_arm", "attack_timer", "heavy_attack_charge")]
script = ExtResource("7_flf3p")
weapon_hitbox = NodePath("../../Head/Camera3D/Hitboxes/DefaultHitbox")
right_arm = NodePath("../../Head/Camera3D/right_arm")
attack_timer = NodePath("AttackTimer")
heavy_attack_charge = NodePath("HeavyAttackCharge")

[node name="AttackTimer" type="Timer" parent="StateMachine/Attack"]
wait_time = 0.5
one_shot = true

[node name="HeavyAttackCharge" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("collision")]
script = ExtResource("11_4pbxa")
collision = NodePath("../../Hurtbox/Shape")

[node name="DashTimer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.2
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="State" type="Label" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "State"

[node name="Interactable" type="Label" parent="CanvasLayer/Hud"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -11.5
offset_right = 77.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press \"E\" to interact"

[node name="DialogueInterface" type="Control" parent="CanvasLayer/Hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DialogueBox" type="PanelContainer" parent="CanvasLayer/Hud/DialogueInterface"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -225.0
offset_right = 500.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0

[node name="DialogueText" type="Label" parent="CanvasLayer/Hud/DialogueInterface/DialogueBox"]
clip_contents = true
custom_minimum_size = Vector2(900, 150)
layout_mode = 2
size_flags_vertical = 0
text = "test text"
label_settings = SubResource("LabelSettings_12ptb")
autowrap_mode = 3

[node name="NameTag" type="PanelContainer" parent="CanvasLayer/Hud/DialogueInterface"]
clip_contents = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -499.0
offset_top = 75.0
offset_right = -382.0
offset_bottom = 123.0

[node name="NameText" type="Label" parent="CanvasLayer/Hud/DialogueInterface/NameTag"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name"
label_settings = SubResource("LabelSettings_6m2el")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4943959, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Hitboxes" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5602074, 0.21764392)

[node name="DefaultHitbox" type="Area3D" parent="Head/Camera3D/Hitboxes"]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/Hitboxes/DefaultHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4275764, -1.6874707)
shape = SubResource("BoxShape3D_pb3n0")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -3)

[node name="right_arm" parent="Head/Camera3D" instance=ExtResource("6_ons1q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.32603765, -2, 2.15912)

[node name="WeaponHoldPoint" type="Node3D" parent="Head/Camera3D/right_arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4407693, 1.613349, -3.2809014)

[node name="LockOnChamber" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LockOnChamber"]
shape = SubResource("SphereShape3D_4pbxa")

[connection signal="timeout" from="StateMachine/Attack/AttackTimer" to="StateMachine/Attack" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/HeavyAttackCharge" to="StateMachine/Attack" method="on_charge_timer_timeout"]
[connection signal="timeout" from="StateMachine/Dash/DashTimer" to="StateMachine/Dash" method="_on_dash_timer_timeout"]
[connection signal="area_entered" from="Head/Camera3D/Hitboxes/DefaultHitbox" to="StateMachine/Attack" method="_on_default_hitbox_entered"]
[connection signal="body_entered" from="LockOnChamber" to="." method="_on_lock_on_chamber_body_entered"]
[connection signal="body_exited" from="LockOnChamber" to="." method="_on_lock_on_chamber_body_exited"]
